Tests/ShouldFail/try29.adl
CONTEXT Try29
CLASSIFY A ISA B
CLASSIFY B ISA A
s :: A * B [TOT,UNI,INJ]

ENDCONTEXT

{- 
   Purpose: When defined 
                CLASSIFY B ISA A
                CLASSIFY A ISA B
            Then an error message is given:
                The following concepts are equal:
                A and B.
                ==============================
                The following concepts are equal:
                A and B.
    Since both cases are equivalent, a similar message should be the result.
-}